[package]
name = "chewy"
version = "3.0.1"
authors = ["Ellen Marie Dash <me@duckie.co>"]
description = "A command-line RPN calculator."
repository = "https://github.com/duckinator/chewy"
license = "MIT"
edition = "2021"

[dependencies]
# None, right now.

[package.metadata.rpm]
package = "chewy"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
chewy = { path = "/usr/bin/chewy" }
